[package]
name = "randomizer"
version = "0.1.0"
authors = ["valecrafter"]
edition = "2024"
publish = true

[dependencies]
iced = { version = "0.13.1", features = ["tokio"] }
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[package.metadata.windows]
subsystem = "windows"
